[CHORE] Restored overflow-x hidden to body to address issue where horiz. scroll bar appears after vertical scroll bar changes page width

--- a/app/assets/stylesheets/partials/_base.scss
+++ b/app/assets/stylesheets/partials/_base.scss
@@ -26,6 +26,7 @@ body {
 	font-weight: $regular;
 	line-height: $baseLineHeight;
 	color: $grayDark;
+  overflow-x: hidden;
 }
 
 // <html> classes
